force-app/main/default/objects/copado__Feature_Toggle_Requirement__mdt/copado__Feature_Toggle_Requirement__mdt.object-meta.xml
<CustomObject>
    <label>Feature Toggle Requirement</label>
    <pluralLabel>Feature Toggle Requirements</pluralLabel>
</CustomObject>