force-app/main/default/objects/copado__Feature_Toggle_Requirement__mdt/fields/copado__Feature_Toggle__c.field-meta.xml
<CustomField>
    <fullName>copado__Feature_Toggle__c</fullName>
    <label>Feature Toggle</label>
    <referenceTo>copado__Feature_Toggle__mdt</referenceTo>
    <relationshipLabel>Feature Toggle Requirements</relationshipLabel>
    <relationshipName>Feature_Toggle_Requirements</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>