force-app/main/default/objects/copado__Feature_Toggle_Requirement__mdt/fields/copado__Type__c.field-meta.xml
<CustomField>
    <fullName>copado__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CustomPermission</fullName>
                <default>true</default>
                <label>Custom Permission</label>
            </value>
            <value>
                <fullName>PermissionSet</fullName>
                <label>Permission Set</label>
            </value>
            <value>
                <fullName>PermissionSetGroup</fullName>
                <label>Permission Set Group</label>
            </value>
            <value>
                <fullName>CopadoLicense</fullName>
                <label>Copado License</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>