force-app/main/default/objects/copado__Feature_Toggle_Requirement__mdt/fields/copado__Value__c.field-meta.xml
<CustomField>
    <fullName>copado__Value__c</fullName>
    <label>Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>