force-app/main/default/objects/copado__Feature_Toggle_Requirement__mdt/listViews/copado__All_Feature_Toggle_Requirements.listView-meta.xml
<ListView>
    <fullName>copado__All_Feature_Toggle_Requirements</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>copado__Feature_Toggle__c</columns>
    <columns>copado__Type__c</columns>
    <columns>copado__Value__c</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <label>All Feature Toggle Requirements</label>
    <language>en_US</language>
</ListView>